--- a/css/pages/home-page.css
+++ b/css/pages/home-page.css
@@ -386,8 +386,6 @@ nav a {
   background-size: cover;
   margin-top: -150px;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 95%);
-  position: relative;
-  z-index: -1;
 }
 
 /* -------------------------------------------------------------------------- */
